--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "firebase": "^10.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "metro": "~0.80.8",
+    "otp-generator": "^4.0.1",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "expo": {
+    "entryPoint": "./App.js"
   }
 }
